# PredictivePiano

./: .gitignore  LSTM.py  LSTMTest.pth  LSTMTest.py  LSTMTest2.pth  PianoInput.py  README.md  autoEncoderTest.py  cnn.py  firstNeuralnet.py  main.py  midiDataHandler.py  modelLoader.py  pyproject.toml  requirements.txt  run.py  runLSTMModel.py  setup.sh  test.csv  test2.csv  test_midiDataHandler.py  torchTest.py
.trained_model/: cnnExample.pth
midi_files/piano/: Chrono Trigger - Chrono Trigger.mid  Monster Hunter World - Cornerstone of the World.mid  Super Mario World 2 Yoshi's Island - Athletic Theme.mid  Super Smash Bros Melee - Flat Zone.mid  Super Smash Bros Melee - Opening.mid  Undertale - Undertale.mid  Zelda Ocarina of Time - Gerudo Valley (Kyle Laundry).mid  fairy.mid  merge_from_ofoct (1).mid  naruto-ai-to-shuu.mid  naruto-sadness-and-sorrow-2.mid  naruto-sadness-and-sorrow.mid
midi_files/simple/: SoT_Becalmed.mid  Zelda_Grandma.mid  Zelda_Kakariko.mid
notebooks/: LSTMTest.pth  generate_data.ipynb  lstm_0.mid  lstm_1.mid  lstm_2.mid  lstm_3.mid  lstm_4.mid  test.csv  train_lstm.ipynb
